--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react": "18.2.22",
     "@types/react-dom": "18.2.7",
     "antd": "^5.9.2",
+    "mongoose": "^7.5.2",
     "next": "13.5.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
